--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "ant-design-pro": "^2.1.1",
     "antd": "^3.12.1",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
